[package]
name = "rs-wasm-script"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3"

[dependencies.web-sys]
version = "0.3"
features = [
  "Window",
  "Document",
  "Element",
  "HtmlElement",
  "HtmlImageElement",
  "HtmlLinkElement",
  "HtmlHeadElement",
  "HtmlCollection",
  "NodeList",
  "Node",
  "DomTokenList",
  "DomStringMap",
  "DomRect",
  "CssStyleDeclaration",
  "EventTarget",
  "Event",
  "MouseEvent",
  "TouchEvent",
  "TouchList",
  "Touch",
  "Animation",
  "MediaQueryList",
  "console",
]
